fix exits on mobile phones

--- a/src/assets/styles/exits.less
+++ b/src/assets/styles/exits.less
@@ -16,4 +16,7 @@
 	&:before {
 		content: "\0000a0";
 	}
+	&:after {
+		content: "\0000a0";
+	}
 }
